# Recall

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml
bench/: annotate.py  harvest-config.yaml  harvest.py  tasks.py
bench/runner/: __init__.py  capture.py  config.py  cost.py  failure.py  outcome.py
bench/seed_traces/: annotations.jsonl  cli__claude-code__claude-haiku-4-5-20251001__cli-1-metrics__t00__1779892343665.json  cli__claude-code__claude-haiku-4-5-20251001__cli-1-metrics__t01__1779892419940.json  cli__claude-code__claude-haiku-4-5-20251001__cli-1-metrics__t02__1779892501462.json  cli__claude-code__claude-haiku-4-5-20251001__cli-2-test-fix__t00__1779892658537.json  cli__claude-code__claude-haiku-4-5-20251001__cli-2-test-fix__t01__1779892867760.json  cli__claude-code__claude-haiku-4-5-20251001__cli-2-test-fix__t02__1779893354569.json  multi-agent__langgraph__claude-haiku-4-5-20251001__long-1-trip__t00__1779892117828.json  multi-agent__langgraph__claude-haiku-4-5-20251001__long-1-trip__t01__1779892126913.json  multi-agent__langgraph__gpt-4o-mini__long-1-trip__t00__1779892088830.json  multi-agent__langgraph__gpt-4o-mini__long-1-trip__t01__1779892102776.json  multi-agent__langgraph__gpt-4o-mini__partial-1-db__t00__1779892241095.json  multi-agent__langgraph__gpt-4o-mini__partial-1-db__t01__1779892263840.json  multi-agent__langgraph__gpt-5-mini__long-1-trip__t00__1779892135265.json  (+18 more)
docs/: cli-otel.md  decisions.md  observed-failures.md
recall/: __init__.py  schema.py  storage.py
tests/: test_smoke.py
(+8 files in other folders)
