[project]
name = "recall-trace"
version = "0.0.1"
description = "Flight recorder and black-box analyzer for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yizhi Fang" }]
keywords = ["llm", "agents", "debugging", "observability", "tracing", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=3.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "openinference-semantic-conventions>=0.1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
recall = "recall.cli.main:app"
recall-mcp = "recall.mcp.server:main"

[project.urls]
Homepage = "https://github.com/yizhifang123/Recall"
Repository = "https://github.com/yizhifang123/Recall"
Issues = "https://github.com/yizhifang123/Recall/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
